--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,25 +5,25 @@ edition = "2021"
 
 
 [dependencies]
-headless_chrome = {version = "1.0.9",  features = ["fetch"]}
+headless_chrome = {version = "1.0.15",  features = ["fetch"]}
 tl = "0.7.8"
-anyhow = "1.0.79"
-juniper = "0.15.12"
+anyhow = "1.0.89"
+juniper = "0.16.1"
 urlencoding = "2.1.3"
 
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1.0.196", features = ["derive"] }
-serde_json = { version = "*" }
-clap = { version = "4.4.18", features = ["derive"] }
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = { version = "1.0.128" }
+clap = { version = "4.5.17", features = ["derive"] }
 
-diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
-libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
-diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
-rocket = { version = "0.5.0", features = ["serde_json", "json"] }
-thiserror = "1.0.56"
-chrono = "0.4.33"
+diesel = { version = "2.2.4", features = ["sqlite", "chrono"] }
+libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
+diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
+rocket = { version = "0.5.1", features = ["serde_json", "json"] }
+thiserror = "1.0.63"
+chrono = {  version = "0.4.38" , features = ["serde"]}
 failure = "0.1.8"
-indicatif = "0.17.7"
+indicatif = "0.17.8"
 
 
 
